# inversie

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  agent.py  autonomous_agent_demo.py  claude-progress.txt  client.py  init.sh  package.json  progress.py  prompts.py  pyproject.toml  security.py  setup-claude-code.sh  start.py
.claude/commands/: create-spec.md
.claude/skills/bewindvoering/: SKILL.md
.claude/templates/: coding_prompt.template.md
.github/workflows/: ci.yml
api/: database.py  migration.py
backend/: package-lock.json  package.json
backend/prisma/: schema.prisma
backend/src/: index.ts
docs/: 04-claude-code-setup-handleiding.md
frontend/: app.json  global.d.ts  index.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/api/: client.ts
frontend/app/: +not-found.tsx  _layout.tsx  beslis-protocol.tsx  change-pin.tsx  index.tsx  login.tsx  notifications.tsx  settings.tsx
frontend/app/(bewindvoerder)/: _layout.tsx  approvals.tsx  clients.tsx  index.tsx
frontend/app/(tabs)/: _layout.tsx  agenda.tsx  decisions.tsx  index.tsx  money.tsx  toolbox.tsx
frontend/app/client/: [id].tsx
frontend/app/decision/: [id].tsx
frontend/store/: authStore.ts
mcp_server/: feature_mcp.py
prompts/: app_spec.txt  coding_prompt.md  initializer_prompt.md
shared/: types.ts
tests/: conftest.py  test_security.py
