[project]
name = "autonomous-coding"
version = "0.1.0"
description = "Autonomous coding agent powered by Claude Agent SDK"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "isort>=5.13.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "bandit>=1.7.0",
    "pip-audit>=2.6.0",
    "pre-commit>=3.6.0",
]

[tool.black]
line-length = 100
target-version = ["py312"]
exclude = '''
/(
    \.git
    | \.venv
    | venv
    | generations
    | node_modules
    | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = [".git", ".venv", "venv", "generations", "node_modules", "__pycache__"]
known_first_party = ["agent", "client", "security", "progress", "prompts", "api", "mcp_server"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".git",
    ".venv",
    "venv",
    "generations",
    "node_modules",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "SIM113", # enumerate suggestion (optional style)
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["ARG001"]
"tests/**" = ["ARG001"]
"agent.py" = ["ARG001"]  # project_dir reserved for future use
"autonomous_agent_demo.py" = ["E402"]  # load_dotenv must run before imports
"security.py" = ["ARG001"]  # hook signature requires these params
"mcp_server/feature_mcp.py" = ["ARG001", "E712"]  # SQLAlchemy requires == True/False comparisons

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "venv/",
    "generations/",
    "node_modules/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--ignore=venv",
    "--ignore=generations",
    "--ignore=node_modules",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["."]
omit = [
    "venv/*",
    "generations/*",
    "node_modules/*",
    "tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.bandit]
exclude_dirs = ["venv", "generations", "node_modules", "tests"]
skips = ["B101", "B310"]  # B310: urlopen is used for webhook with validated URL
